# openni_wrapper

./: .cproject  .gitignore  .project  CommonMakefile  Makefile  NiteMakefile  README.md
PointViewer/: PointViewer.mak  main.cpp
config/: config.xml
simple_viewer/: 3d_viewer.h  CMakeLists.txt  Makefile  main.cpp  pc_viewer.cpp  pc_viewer.h  simple_viewer.cpp
src/: FindPCL.cmake  Makefile  hand_processor.cpp  hand_processor.h  main.cpp  makefile  openni_wrapper.cpp  openni_wrapper.h  openni_wrapper_jni.cpp  openni_wrapper_jni.h  pc_viewer.cpp  pc_viewer.h  simple_viewer.cpp  simple_viewer.h
test/: config.xml  makefile  openni_wrapper_unittest.cpp
wrapper/: Makefile  openni_wrapper.cpp  openni_wrapper.h  openni_wrapper_jni.cpp  openni_wrapper_jni.h
